if -> switch CoinmarketCap 객체 수정
(cherry picked from commit fb6cf97)

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-  "Exchanges":{
+  "exchanges":{
     "coinone":{
 
     },
@@ -9,5 +9,7 @@
     "bithumb":{
 
     }
-  }
+  },
+  "telegram_bot_token":"",
+  "krw_premium_preset":[15.0, 10.0, 5.0, 2.0, 1.0, 0.0 ,-1.0, -2.0, -5.0, -10.0, -15.0]
 }
