phantomjs npm 설치 config

--- a/.ebextensions/01_phantomjs.config
+++ b/.ebextensions/01_phantomjs.config
@@ -11,3 +11,5 @@ commands:
     command: sudo tar -xvf phantomjs-2.1.1-linux-x86_64.tar --directory /opt/phantomjs/ --strip-components 1
   06_symlink:
     command: sudo ln -fs /opt/phantomjs/bin/phantomjs /usr/bin/phantomjs
+  07_phantomjs:
+    command: sudo npm install phantomjs -g
