--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "price-checker-telegram-bot",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "crytocurrency price checker bot",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/.bin/mocha $(find ./test -name '*spec.js') --recursive -w"
   },
   "author": "forsyphilis@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "lodash": "^4.17.4",
     "node-telegram-bot-api": "^0.27.1",
     "webshot": "^0.18.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.5.0"
   }
 }
