coveralls 의존성 추가, travis.yml 에 스크립팅 추가

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: node_js
-  - 0.6
-  - 0.7
-  - 0.8
+  - "stable"
 
 install : "yarn install"
 
@@ -11,3 +9,7 @@ branches:
   only:
     - master
     - development
+
+
+after_success:
+ - npm run coveralls
