--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
+    "cover": "istanbul cover _mocha",
+    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
     "test": "node ./node_modules/.bin/mocha $(find ./test -name '*spec.js') --recursive",
     "test_watch": "node ./node_modules/.bin/mocha $(find ./test -name '*spec.js') --recursive -w"
   },
@@ -18,6 +20,9 @@
     "webshot": "^0.18.0"
   },
   "devDependencies": {
-    "mocha": "^3.5.0"
+    "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.5.0",
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
