--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,9 @@ language: node_js
 
 install : "yarn install"
 
-script: npm run test
+script: npm run coveralls
 
 branches:
   only:
     - master
     - development
-
-
-after_success:
- - npm run coveralls
