--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
+    "chai": "^4.1.2",
+    "expect": "^21.1.0",
+    "lodash": "^4.17.4",
+    "node-telegram-bot-api": "^0.27.1"
+  },
+  "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "expect": "^21.1.0",
-    "lodash": "^4.17.4",
-    "node-telegram-bot-api": "^0.27.1",
-    "webshot": "^0.18.0"
-  },
-  "devDependencies": {
     "coveralls": "^2.13.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
