--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["env", "stage-0"],
+  "presets": ["env", "stage-0", "stage-1"],
   "env": {
     "test": {
       "plugins": ["istanbul"]
